--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <title>Adaptive Mentor</title>
     <style>
+	    * {
+		     margin: 0;
+		    padding: 0;
+		    box-sizing: border-box; 
+	    }
         body, html {
             height: 100%;
             margin: 0;
@@ -69,7 +74,9 @@
             background-image: url('am5.jpg');
             background-size: cover;
             background-position: center;
-            height: 625px;
+	    background-repeat: no-repeat;
+            height: 100vh;
+	    width: 100%;
             color: #edbb99;
             display: flex;
             justify-content: center;
